2010-02-12 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/modules/manage_network_components_form.php: clean source code and
	set correct ident.

	*godmode/modules/manage_network_components_form_network.php: remove the end
	of source code that it's unused.

2010-02-11 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: clean source code, delete javascript debug
	info messages for firebug.

	* godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/configurar_agente.php: add support for SMNP ver3 in the
	forms to add or edit "Network module".

2010-02-10  Sancho Lerena <slerena@artica.es>

 	* godmode/db/db_main.php: Added new metrics about DB usage. Added
	last time pandora_db.pl was running in the system.

	* godmode/db/db_info.php: Added graphic from db_main

	* operation/reporting/reporting_viewer_pdf.php
	include/functions_reporting_pdf.php: Small fixes for PDF reporting. 
	Decode entities to show texts correctly in description of each element.

	* pandoradb.sql: new enterprise structures.

2010-02-10 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: in function "saveMap" now save the default
	connection.
	
	* operation/gis_maps/ajax.php: add option "get_data_conexion" for get by
	ajax the data connection when pass id_connection.
	
	* godmode/gis_maps/configure_gis_map.php: now you can set the default
	connection and too load the data by default for each connection.

2010-02-10  Pablo de la Concepción <pablo.concepcion@artica.es>

	* godmode/gis_maps/index.php: Fixed regresion, standarized using map_id
	as parameter.

	* pandoradb.sql, extras/pandoradb_migrate_v3.0_to_v3.1.sql: Added column
	default_map to table tgis_map to mark the default map

2010-02-10  Sancho Lerena <slerena@artica.es>

	* events.php: Fixed a bad link with an invalid id_agent.

	* pandoradb.sql: Changes in several tables and new tgroup_stat table.
	Added several index and dropped some fields in tagente_datos and 